[gd_scene load_steps=4 format=3 uid="uid://ejwdq7wo6uj4"]

[ext_resource type="Script" path="res://Screens/player_screen.gd" id="1_b2myb"]
[ext_resource type="PackedScene" uid="uid://bmgqmo77bep3l" path="res://Screens/overlay.tscn" id="2_74efq"]
[ext_resource type="PackedScene" uid="uid://cnb8g5qwhngnr" path="res://Characters/player_card.tscn" id="7_44m7h"]

[node name="PlayerScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b2myb")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.286275, 0.341176, 0.545098, 1)

[node name="Buttons" type="VBoxContainer" parent="CanvasLayer/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.15
anchor_top = 0.5
anchor_right = 0.15
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 89.0
offset_bottom = 20.0
grow_vertical = 2

[node name="Generate" type="Button" parent="CanvasLayer/ColorRect/Buttons"]
layout_mode = 2
text = "GENERATE"

[node name="GenerateCard" type="Button" parent="CanvasLayer/ColorRect/Buttons"]
layout_mode = 2
text = "GENERATE CARD"

[node name="PrintPlayers" type="Button" parent="CanvasLayer/ColorRect/Buttons"]
layout_mode = 2
text = "PRINT PLAYERS"

[node name="AddFunds" type="Button" parent="CanvasLayer/ColorRect/Buttons"]
layout_mode = 2
text = "ADD FUNDS"

[node name="SubtractFunds" type="Button" parent="CanvasLayer/ColorRect/Buttons"]
layout_mode = 2
text = "SUBTRACT FUNDS"

[node name="Overlay" parent="CanvasLayer" instance=ExtResource("2_74efq")]

[node name="Cards" type="Node2D" parent="."]
position = Vector2(-36, 107)

[node name="PlayerCard" parent="Cards" instance=ExtResource("7_44m7h")]
offset = Vector2(2.625, 0)
rotation = -6.01615
transform = Transform2D(0.964557, 0.263873, -0.263873, 0.964557, 2.625, 0)

[node name="PlayerCard2" parent="Cards" instance=ExtResource("7_44m7h")]
offset = Vector2(300, 0)
rotation = -0.235619
scale = Vector2(1.5, 1.5)
transform = Transform2D(1.45855, -0.350168, 0.350168, 1.45855, 300, 0)

[connection signal="button_down" from="CanvasLayer/ColorRect/Buttons/Generate" to="." method="_on_generate_button_down"]
[connection signal="button_down" from="CanvasLayer/ColorRect/Buttons/GenerateCard" to="." method="_on_generate_card_button_down"]
[connection signal="button_down" from="CanvasLayer/ColorRect/Buttons/PrintPlayers" to="." method="_on_print_players_button_down"]
[connection signal="button_down" from="CanvasLayer/ColorRect/Buttons/AddFunds" to="." method="_on_add_funds_button_down"]
[connection signal="button_down" from="CanvasLayer/ColorRect/Buttons/SubtractFunds" to="." method="_on_subtract_funds_button_down"]
